# cut

./: .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md  build.sh  clang_parser.py  pyproject.toml  test.c
cut/: __version__.py  build_action.py  cli.py  code_generator.py  gcc_toolchain.py  knowlege.py  log_parser.py  logger.py  test_case.py
include/: AnalyzeGraph.h
patch/: 0001-add-casefind-checker.patch
src/: AnalyzeGraph.cpp  Kut.cpp  Utils.cpp
